# libs3

./: CMakeLists.txt  libs3.kdev4
CMakeImports/: import-Linux.cmake
inc/: libs3.h  request_context.h  string_buffer.h
src/: CMakeLists.txt  bucket.c  mingw_s3_functions.c  multipart.c  request.c  simplexml.c
